🐛fix(menu) text should overflow with an ellipse

--- a/src/app/components/menu/entry-list/entry-list.component.scss
+++ b/src/app/components/menu/entry-list/entry-list.component.scss
@@ -126,14 +126,19 @@ app-entry-list {
     }
 
     .label {
-        display: flex;
         align-items: center;
+        white-space: pre;
+        text-overflow: ellipsis;
+        overflow: hidden;
 
         mat-icon {
-            font-size: 18px;
+            position: relative;
+            top: -1.5px;
+
             width: 18px;
             height: 18px;
             margin-right: 0px !important;
+            font-size: 18px;
         }
     }
 }
